# b2

./: .gitignore  Cargo.toml  LICENSE  README.md  debug.sh
b2ctl/: Cargo.toml
b2ctl/src/: args.rs  conf.rs  config.rs  main.rs
config/: Cargo.toml
config/src/: boot.rs  bootconf.rs  lib.rs
doc/: bootlabel.md  config.md  roadmap.md
src/: config.dist.rs  error.rs  initedcell.rs  main.rs
src/boot/: boot.rs  mod.rs
src/boot/efi/: mod.rs
src/boot/linux/: mod.rs
src/config/: boot_config.rs  lock.rs  mod.rs
src/console/: ansi.rs  basicmenu.rs  console.rs  efi.rs  menu.rs  mod.rs  serial.rs  tty.rs
src/graphics/: backend.rs  component.rs  mod.rs
src/io/: console.rs  meta.rs  mod.rs
src/io/file/: efi.rs  mod.rs
src/platform/: mod.rs
src/platform/efi/: boot.rs  console.rs  efi_error.rs  entry.rs  error.rs  file.rs  init.rs  logger.rs  mod.rs  tty.rs
xtask/src/: main.rs
