[workspace]
members = [ "b2ctl", "config", "xtask"]

[package]
name = "b2"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = {version = "1.0.79", default-features = false}
once_cell = {version = "1.19", default-features = false, features = ["alloc"]}
thiserror = {version = "1.0", package = "thiserror-core", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.5.1"
config = {path = "./config", default-features = false, features = ["no_std"]}

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = {version = "0.26", features = ["alloc","unstable"]}
uefi-services = {version = "0.23", default-features = false, features = ["logger"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.10"

[features]
default = ["password", "edit"]

# Graphical Interface (TODO)
graphic = []

# Password lock for the bootloader. (TODO)
password = []

# Line editing capability.
# If this is not enabled, inputs can't be navigated or edited in the middle.
edit = []

# Embedded Config.
# Put config in config.default .

# Put config file in src/config.toml .
embedded-config = []

[profile.release]
debug = "full"

[profile.release-compact]
inherits = "release"
debug = "full"
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
# Comment this line out to use cargo-bloat.
#strip = true 
