[package]
name = "b2ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rustyline = "13.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
